Issue #102: Light grey explanatory text in the search box isn't fully visible

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -269,7 +269,6 @@
 // though so that navbar contents properly stack and align in mobile.
 
 @media (min-width: @grid-float-breakpoint) {
-  .navbar-left  { .pull-left(); }
   .navbar-right { .pull-right(); }
 }
 
